Adding LT part in Our Story

--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
         </article>
 
         <article lang="lt">
-            Laba diena su vištiena
-            ĄČĘĖĮŠŲŪŽ ąčęėįšųūž
+            <h1>Mūsų istorija</h1>
+            <p><small>Tiems, kurie dar jos nežino...</small></p>
+            <p>Mes pirmą kartą susipažinome prieš beveik 6 metus Prahoje.</p>
+            <p>Tada mes susitikdavome vėl ir vėl įvairiose Europos vietose ir tik po vienerių metų, 2016 m. rugpjūčio 27 d. Makedonijoje įsižiebė meilės kibirkštėlė.</p>
+            <p>Nuo tada mes pradėjome draugauti kol Jūratė gyveno Kaune, o Paco Madride.</p>
+            <p>Iš pradžių tai buvo sunku, tačiau kiekvienas susitikimas tai atpirkdavo.</p>
+            <p>Po beveik 3 metų vienas kito lankymo, Paco nusprendė persikelti į Lietuvą ir gyventi kartu. Mūsų vestuvių dieną bus lygiai 5 metai kaip esame kartu.</p>
         </article>
     </section>
 
