--- a/index.html
+++ b/index.html
@@ -98,56 +98,79 @@
     </section>
 
     <section id="rsvp">
-        <h1>RSVP</h1>
-        <p>Fill out <a href="#TODO">this form</a> in order to let us know if you are joining us on our special day.</p>
+        <article lang="en">
+            <h1>RSVP</h1>
+            <p>Fill out <a href="#TODO">this form</a> in order to let us know if you are joining us on our special day.</p>
+        </article>
+        <article lang="es">
+            <h1>Confirma tu asistencia</h1>
+            <p>Rellena <a href="#TODO">este formulario</a> para indicarnos si podrás unirte a nuestra celebración.</p>
+        </article>
+        <article lang="lt"></article>
     </section>
 
     <section id="gifts">
-        <h1>Gifts</h1>
-        <p>The best gift is your presence in the event. After so much time not seeing each other, we'd love to have you with us in Kaunas on this special day.</p>
-        <p>Since we are not sure where we'll be living in the future, we'd appreciate more gifts in cash than furniture or house appliances that we would need to move from house to house.</p>
+        <article lang="en">
+            <h1>Gifts</h1>
+            <p>The best gift is your presence in the event. After so much time not seeing each other, we'd love to have you with us in Kaunas on this special day.</p>
+            <p>Since we are not sure where we'll be living in the future, we'd appreciate more gifts in cash than furniture or house appliances that we would need to move from house to house.</p>
+        </article>
+        <article lang="es">
+            <h1>Regalos</h1>
+            <p>El mejor regalo que podemos recibir es vuestra presencia en el evento. Después de tanto tiempo sin vernos, nos encantaría tenerte con nosotros en Kaunas y poder celebrar todos juntos esta día tan especial.</p>
+            <p>Dado que no sabemos dónde viviremos en un futuro cercano preferiríamos recibir regalos en metálico en lugar de muebles o electrodomésticos que nos tocaría luego llevarnos de mudanza.</p>
+        </article>
+        <article lang="lt"></article>
     </section>
 
     <section id="kaunas">
-        <h1>How to get to Kaunas and where to stay</h1>
-        <img
-            src="assets/lithuanian.jpg"
-            alt="Picture of us in the Lithuanian Embassy in Madrid"
-        >
-        <h2>Travelling to Kaunas</h2>
-        <p>Depending where you are coming from, you may find several alternatives. We'd recommend you taking a flight to Kaunas Airport. Vilnius Airport is also well connected by train to Kaunas.</p>
-        <p>TODO: Create some sort of survival guide on how to get to Kaunas city from the different airports</p>
-        <h2>Where to stay in Kaunas</h2>
-        <p>Keep in mind that the wedding night we will all sleep at the venue, which is around 45 min away from Kaunas</p>
-        <p>For the rest of the days, in case you want to spend some days in the city and/or explore the country, here are some places we can recommend depending on your budget:</p>
-        <ul>
-            <li>Hotel 1 - 90€ / night</li>
-            <li>Hotel 2 - 80€ / night</li>
-            <li>AirBnB in the Old Town - 30-40€ / night</li>
-            <li>AirBnB in the outskirts of the city - 15-20€ / night</li>
-            <li>Hostel - 15€ / night</li>
-        </ul>
+        <article lang="en">
+            <h1>How to get to Kaunas and where to stay</h1>
+            <img
+                src="assets/lithuanian.jpg"
+                alt="Picture of us in the Lithuanian Embassy in Madrid"
+            >
+            <h2>Travelling to Kaunas</h2>
+            <p>Depending where you are coming from, you may find several alternatives. We'd recommend you taking a flight to Kaunas Airport. Vilnius Airport is also well connected by train to Kaunas.</p>
+            <p>TODO: Create some sort of survival guide on how to get to Kaunas city from the different airports</p>
+            <h2>Where to stay in Kaunas</h2>
+            <p>Keep in mind that the wedding night we will all sleep at the venue, which is around 45 min away from Kaunas</p>
+            <p>For the rest of the days, in case you want to spend some days in the city and/or explore the country, here are some places we can recommend depending on your budget:</p>
+            <ul>
+                <li>Hotel 1 - 90€ / night</li>
+                <li>Hotel 2 - 80€ / night</li>
+                <li>AirBnB in the Old Town - 30-40€ / night</li>
+                <li>AirBnB in the outskirts of the city - 15-20€ / night</li>
+                <li>Hostel - 15€ / night</li>
+            </ul>
+        </article>
+        <article lang="es"></article>
+        <article lang="lt"></article>
     </section>
 
     <section id="venue">
-        <h1>Wedding day</h1>
-        <p>The wedding is planned for Friday 27th August 2021</p>
-        <p>
-            The ceremony will be held at
-            <a
-                href="https://www.google.es/maps/place/Rotu%C5%A1%C4%97s+aik%C5%A1t%C4%97/@54.8967432,23.884456,17z/data=!3m1!4b1!4m5!3m4!1s0x46e723576a8e2c9f:0xa86456a78eb0edf1!8m2!3d54.8967432!4d23.8866447"
-                target="_blank"
+        <article lang="en">
+            <h1>Wedding day</h1>
+            <p>The wedding is planned for Friday 27th August 2021</p>
+            <p>
+                The ceremony will be held at
+                <a
+                    href="https://www.google.es/maps/place/Rotu%C5%A1%C4%97s+aik%C5%A1t%C4%97/@54.8967432,23.884456,17z/data=!3m1!4b1!4m5!3m4!1s0x46e723576a8e2c9f:0xa86456a78eb0edf1!8m2!3d54.8967432!4d23.8866447"
+                    target="_blank"
+                >
+                Kaunas City Hall
+                </a>
+                at 13:00 EEST (time subject to change).
+            </p>
+            <img
+                src="assets/city-hall.jpg"
+                alt="Kaunas City Hall"
             >
-            Kaunas City Hall
-            </a>
-            at 13:00 EEST (time subject to change).
-        </p>
-        <img
-            src="assets/city-hall.jpg"
-            alt="Kaunas City Hall"
-        >
-        <p>After the civil ceremony, we'll hang out in the square near the City Hall and then we'll go by a private bus all together (but the newly weds) to the venue.</p>
-        <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
+            <p>After the civil ceremony, we'll hang out in the square near the City Hall and then we'll go by a private bus all together (but the newly weds) to the venue.</p>
+            <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
+        </article>
+        <article lang="es"></article>
+        <article lang="lt"></article>
     </section>
 </body>
 
