Apply copy feedback from Google Docs

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <p>We met for the first time almost 6 years ago in Prague.</p>
             <p>Then we met again and again in different places but only 1 year later, August 27th 2016, the spark of love happened in FYROM, nowadays known as North Macedonia.</p>
             <p>Since then we started a distant relationship, Juju living in Kaunas, Paco living in Madrid.</p>
-            <p>It was hard at the beginning but every time we could meet made it worth it.</p>
-            <p>After almost 3 years of visiting each other Paco moved to Lithuania so they could live together. On the wedding day it will be exactly 5 years being together.</p>
+            <p>It was hard at the beginning but every time we could meet, we made it worth it.</p>
+            <p>After almost 3 years of visiting each other, Paco moved to Lithuania so they could live together. On the wedding day, it will be exactly 5 years being together.</p>
         </article>
 
         <article lang="es">
@@ -118,12 +118,12 @@
         <article lang="en">
             <h1>Gifts</h1>
             <p>The best gift is your presence in the event. After so much time not seeing each other, we'd love to have you with us in Kaunas on this special day.</p>
-            <p>Since we are not sure where we'll be living in the future, we'd appreciate more gifts in cash than furniture or house appliances that we would need to move from house to house.</p>
+            <p>However, for those who have been asking us how to contribute to this new chapter in our lives, we've created a bank account here:</p>
         </article>
         <article lang="es">
             <h1>Regalos</h1>
             <p>El mejor regalo que podemos recibir es vuestra presencia en el evento. Después de tanto tiempo sin vernos, nos encantaría tenerte con nosotros en Kaunas y poder celebrar todos juntos esta día tan especial.</p>
-            <p>Dado que no sabemos dónde viviremos en un futuro cercano preferiríamos recibir regalos en metálico en lugar de muebles o electrodomésticos que nos tocaría luego llevarnos de mudanza.</p>
+            <p>Sin embargo, para aquellos que nos han estado preguntando cómo contribuir a este nuevo capítulo en nuestras vidas, hemos creado una cuenta bancaria aquí:</p>
         </article>
         <article lang="lt"></article>
     </section>
@@ -137,6 +137,7 @@
             >
             <h2>Travelling to Kaunas</h2>
             <p>Depending where you are coming from, you may find several alternatives. We'd recommend you taking a flight to Kaunas Airport. Vilnius Airport is also well connected by train to Kaunas.</p>
+            <p>Here you can find the tickets for BUSES and TRAINS to Kaunas [TODO:add links].</p>
             <p>TODO: Create some sort of survival guide on how to get to Kaunas city from the different airports</p>
             <h2>Where to stay in Kaunas</h2>
             <p>Keep in mind that the wedding night we will all sleep at the venue, which is around 45 min away from Kaunas</p>
@@ -171,7 +172,7 @@
                 src="assets/city-hall.jpg"
                 alt="Kaunas City Hall"
             >
-            <p>After the civil ceremony, we'll hang out in the square near the City Hall and then we'll go by a private bus all together (but the newly weds) to the venue.</p>
+            <p>After the civil ceremony, we'll hang out in the square near the City Hall and then we'll go by a private bus all together (except the newly weds) to the venue.</p>
             <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
         </article>
         <article lang="es"></article>
