Adding the rest of LT translation for all text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         >
             <span lang="en">Juju & Paco</span>
             <span lang="es">Juju y Paco</span>
-            <span lang="lt">Juju ir Paco</span>
+            <span lang="lt">Jūratė ir Paco</span>
         </a>
         <a href="#rsvp">
             <span lang="en">RSPV</span>
@@ -111,7 +111,10 @@
             <h1>Confirma tu asistencia</h1>
             <p>Rellena <a href="#TODO">este formulario</a> para indicarnos si podrás unirte a nuestra celebración.</p>
         </article>
-        <article lang="lt"></article>
+        <article lang="lt">
+         <h1>Registracija</h1>
+            <p>Užpildykite <a href="#TODO">šią anketą</a>, kad žinotume dėl jūsų atvykimo mūsų ypatingąją dieną.</p>
+        </article>
     </section>
 
     <section id="gifts">
@@ -125,7 +128,11 @@
             <p>El mejor regalo que podemos recibir es vuestra presencia en el evento. Después de tanto tiempo sin vernos, nos encantaría tenerte con nosotros en Kaunas y poder celebrar todos juntos esta día tan especial.</p>
             <p>Sin embargo, para aquellos que nos han estado preguntando cómo contribuir a este nuevo capítulo en nuestras vidas, hemos creado una cuenta bancaria aquí:</p>
         </article>
-        <article lang="lt"></article>
+        <article lang="lt">
+        <h1>Dovanos</h1>
+            <p>Geriausia dovana, kurią jūs mums galite padovanoti, yra jūsų buvimas šioje šventėje. Po ilgo nesimatymo, jūsų buvimas mums brangią ieną būtų neįkainojamas.</p>
+            <p>Visgi, jei norite prisidėti prie mūsų naujo gyvenimo skyriaus, tam mes sukūrėme banko sąskaitą:</p>       
+        </article>
     </section>
 
     <section id="kaunas">
@@ -151,7 +158,11 @@
             </ul>
         </article>
         <article lang="es"></article>
-        <article lang="lt"></article>
+        <article lang="lt">
+        <h1>Kaip nusigauti iki Kauno ir kur apsistoti</h1>
+            Kadangi esame Lietuvoje, neturėtų būti sunku tarpusavyje susitarti dėl nakvynės dieną prieš ar po vestuvių šventės.
+            Vestuvių naktį praleisime sodyboje, tad pasiimkite viską, kas būtų reikalinga nakvynei ir sekančiai dienai.
+        </article>
     </section>
 
     <section id="venue">
@@ -176,7 +187,26 @@
             <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
         </article>
         <article lang="es"></article>
-        <article lang="lt"></article>
+        <article lang="lt">
+        <h1>Wedding day</h1>
+            <p>Vestuvės įvyks 2021 m. rugpjūčio 27 d., penktadienį.</p>
+            <p>
+                Ceremonija įvyks
+                 <a
+                    href="https://www.google.es/maps/place/Rotu%C5%A1%C4%97s+aik%C5%A1t%C4%97/@54.8967432,23.884456,17z/data=!3m1!4b1!4m5!3m4!1s0x46e723576a8e2c9f:0xa86456a78eb0edf1!8m2!3d54.8967432!4d23.8866447"
+                    target="_blank"
+                >
+                Kauno Rotušėje
+                </a>
+                13 val. (laikas gali keistis).</p>
+            <p>Po ceremonijos planuojame pasibūti Rotušės aikštėje ir tada keliauti į 
+                <a
+                    href="https://www.google.com/maps/place/Kirk%C5%A1nov%C4%97/@55.303124,23.440597,15z/data=!4m5!3m4!1s0x0:0x8b9947a1b94fb511!8m2!3d55.303124!4d23.440597"
+                    target="_blank"
+                >   
+                Kirkšnovės sodybą.</a></p>
+            <p>Jei neturite mašinos, būtinai praneškite mums, tada užtikrinsime vietą išnuomuotame autobuse.</p>
+        </article>
     </section>
 </body>
 
