--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juju & Paco's wedding</title>
+    <link rel="shortcut icon" href="assets/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oregano&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -16,6 +17,11 @@
             href="#home"
             class="fancy"
         >
+            <img
+                src="assets/logo.svg"
+                alt="logo"
+                style="width: 41px; margin-right: 0.5rem;"
+            >
             <span lang="en">Juju & Paco</span>
             <span lang="es">Juju y Paco</span>
             <span lang="lt">Jūratė ir Paco</span>
