Add Spanish translations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juju & Paco's wedding</title>
+    <title>Jurate & Paco's wedding</title>
     <link rel="shortcut icon" href="assets/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oregano&display=swap" rel="stylesheet">
@@ -163,7 +163,25 @@
                 <li>Hostel - 15€ / night</li>
             </ul>
         </article>
-        <article lang="es"></article>
+        <article lang="es">
+            <h1>Cómo llegar a Kaunas y dónde dormir</h1>
+            <img
+                src="assets/lithuanian.jpg"
+                alt="Foto nuestra en la Embajada Lituana, Madrid"
+            >
+            <h2>Cómo llegar a Kaunas</h2>
+            <p>Desde España, hay varias alternativas interesantes para ir a Lituania, casi siempre supone hacer transbordo. Mis recomendaciones son:</p>
+            <ul>
+                <li>Volar con <a href="https://www.lufthansa.com/es/es/homepage">Lufthansa</a> hasta Vilnius haciendo transbordo en Alemania</li>
+                <li>Volar con <a href="https://www.lot.com/es/es/">Lot</a> hasta Vilnius o Kaunas haciendo transbordo en Varsovia</li>
+                <li>Vuelo directo con <a href="https://www.ryanair.com/es/es">Ryanair</a> desde Alicante</li>
+            </ul>
+            <p>Si voláis a Vilnius, no hay problema, luego desde allí podéis coger el tren hasta Kaunas. Otra alternativa sería alquilar un coche de <a href="https://www.citybee.lt/en">City Bee</a> y conducir hasta Kaunas (alquiler por horas).</p>
+            <h2>Dónde dormir</h2>
+            <p>Nuestra recomendación sería que os pongáis de acuerdo para alquilar apartamentos de <a href="https://es.airbnb.com/">AirBnB</a> por la zona del casco antiguo de Kaunas o la zona centro.</p>
+            <p>Todo lo que sea cerca de Laisves Aleja o Vilniaus Gatve es buena zona.</p>
+            <p>Si preferís ir de hotel, podéis encontrar buenas oportunidades en <a href="https://www.booking.com/index.es.html">Booking.com</a>.</p>
+        </article>
         <article lang="lt">
             <h1>Kaip nusigauti iki Kauno ir kur apsistoti</h1>
             Kadangi esame Lietuvoje, neturėtų būti sunku tarpusavyje susitarti dėl nakvynės dieną prieš ar po vestuvių šventės.
@@ -192,7 +210,28 @@
             <p>After the civil ceremony, we'll hang out in the square near the City Hall and then we'll go by a private bus all together (except the newly weds) to the venue.</p>
             <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
         </article>
-        <article lang="es"></article>
+        <article lang="es">
+            <h1>Día de la boda</h1>
+            <p>El día de la boda es el viernes 27 de agosto de 2021</p>
+            <p>
+                La ceremonia tendrá lugar en el
+                <a
+                    href="https://www.google.es/maps/place/Rotu%C5%A1%C4%97s+aik%C5%A1t%C4%97/@54.8967432,23.884456,17z/data=!3m1!4b1!4m5!3m4!1s0x46e723576a8e2c9f:0xa86456a78eb0edf1!8m2!3d54.8967432!4d23.8866447"
+                    target="_blank"
+                >
+                Ayuntamiento de Kaunas
+                </a>
+                a las 13:00 (hora local) (estamos negociando retrasar la ceremonia unas horas).
+            </p>
+            <img
+                src="assets/city-hall.jpg"
+                alt="Kaunas City Hall"
+            >
+            <p>Después de la ceremonia civil, nos tomaremos algo en la plaza del ayuntamiento y luego los invitados irán en bus privado al lugar que hemos reservado para la fiesta. Los novios nos escaparemos mientras tanto para hacernos la sesión de fotos.</p>
+            <p>Por si queréis echar un ojo al lugar de la fiesta, <a href="https://www.kirksnove.lt/en/weddings/">aquí tenéis su web</a>.</p>
+            <p>Aparte de las cosas típicas de cualquier boda (cenar, tomarse alguna copa y bailar) podremos disfrutar de alguna tradición típica lituana y también, ¡tenemos reservado el sitio para que todos los invitados se queden a dormir!</p>
+            <p>Al día siguiente (hora por confirmar) tomaremos el desayuno y luego volveremos en bus a Kaunas.</p>
+        </article>
         <article lang="lt">
             <h1>Wedding day</h1>
             <p>Vestuvės įvyks 2021 m. rugpjūčio 27 d., penktadienį.</p>
