Add links to set the language in case the user wants to change it manually

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <span lang="es">Juju y Paco</span>
             <span lang="lt">Jūratė ir Paco</span>
         </a>
+        
+        <a data-lang="es">ES</a>
+        <a data-lang="en">EN</a>
+        <a data-lang="lt">LT</a>
+
         <a href="#rsvp">
             <span lang="en">RSPV</span>
             <span lang="es">Confirma tu asistencia</span>
