--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </article>
         <article lang="lt">
          <h1>Registracija</h1>
-            <p>Užpildykite <a href="#TODO">šią anketą</a>, kad žinotume dėl jūsų atvykimo mūsų ypatingąją dieną.</p>
+            <p>Užpildykite <a href="https://forms.gle/b91bZjtBuDePbDNQA">šią anketą</a>, kad žinotume dėl jūsų atvykimo mūsų ypatingąją dieną.</p>
         </article>
     </section>
 
