--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
         </article>
         <article lang="lt">
             <h1>Kaip nusigauti iki Kauno ir kur apsistoti</h1>
+            <img
+                src="assets/lithuanian.jpg"
+                alt="Picture of us in the Lithuanian Embassy in Madrid"
+            >
             <p>Kadangi esame Lietuvoje, neturėtų būti sunku tarpusavyje susitarti dėl nakvynės dieną prieš ar po vestuvių šventės.</p>
             <p>Vestuvių naktį praleisime sodyboje, tad pasiimkite viską, kas būtų reikalinga nakvynei ir sekančiai dienai.</p>
         </article>
@@ -280,6 +284,10 @@
                 Kauno Rotušėje
                 </a>
                 13 val. (laikas gali keistis).</p>
+            <img
+                src="assets/city-hall.jpg"
+                alt="Kaunas City Hall"
+            >
             <p>Po ceremonijos planuojame pasibūti Rotušės aikštėje ir tada keliauti į 
                 <a
                     href="https://www.google.com/maps/place/Kirk%C5%A1nov%C4%97/@55.303124,23.440597,15z/data=!4m5!3m4!1s0x0:0x8b9947a1b94fb511!8m2!3d55.303124!4d23.440597"
