Translating alt text to LT

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <h1>Kaip nusigauti iki Kauno ir kur apsistoti</h1>
             <img
                 src="assets/lithuanian.jpg"
-                alt="Picture of us in the Lithuanian Embassy in Madrid"
+                alt="Mes Lietuvos ambasadoje Madride"
             >
             <p>Kadangi esame Lietuvoje, neturėtų būti sunku tarpusavyje susitarti dėl nakvynės dieną prieš ar po vestuvių šventės.</p>
             <p>Vestuvių naktį praleisime sodyboje, tad pasiimkite viską, kas būtų reikalinga nakvynei ir sekančiai dienai.</p>
@@ -286,7 +286,7 @@
                 13 val. (laikas gali keistis).</p>
             <img
                 src="assets/city-hall.jpg"
-                alt="Kaunas City Hall"
+                alt="Kauno Rotušė"
             >
             <p>Po ceremonijos planuojame pasibūti Rotušės aikštėje ir tada keliauti į 
                 <a
