--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 >
                 Kaunas City Hall
                 </a>
-                at 13:00 EEST (time subject to change).
+                at 14:50 EEST (it used to be at 13:00).
             </p>
             <img
                 src="assets/city-hall.jpg"
@@ -262,7 +262,7 @@
                 >
                 Ayuntamiento de Kaunas
                 </a>
-                a las 13:00 (hora local) (estamos negociando retrasar la ceremonia unas horas).
+                a las 14:50 (hora local) (hemos actualizado la hora).
             </p>
             <img
                 src="assets/city-hall.jpg"
@@ -284,7 +284,7 @@
                 >
                 Kauno Rotušėje
                 </a>
-                13 val. (laikas gali keistis).</p>
+                14:50 val. (laikas gali keistis).</p>
             <img
                 src="assets/city-hall.jpg"
                 alt="Kauno Rotušė"
