[NEW] Add SWIFT Code to bank account

--- a/index.html
+++ b/index.html
@@ -144,7 +144,18 @@
             <p>Geriausia dovana, kurią jūs mums galite padovanoti, yra jūsų buvimas šioje šventėje. Po ilgo nesimatymo, jūsų buvimas mums brangią ieną būtų neįkainojamas.</p>
             <p>Visgi, jei norite prisidėti prie mūsų naujo gyvenimo skyriaus, tam mes sukūrėme banko sąskaitą:</p>       
         </article>
-        <p>ES73 1465 01 00961725866024</p>
+        <p>
+            <span lang="en">Name:</span>
+            <span lang="es">Nombre:</span>
+            <span lang="lt">Vardas:</span>
+            Francisco Gordillo Alcázar
+        </p>
+        <p>IBAN: ES73 1465 01 00961725866024</p>
+        <p>
+            <span lang="en">SWIFT</span>
+            <span lang="es">Código</span>
+            <span lang="lt">SWIFT</span>
+            BIC: INGDESMMXXX</p>
     </section>
 
     <section id="kaunas">
