[NEW] Add survival guide to EN and ES versions

--- a/index.html
+++ b/index.html
@@ -167,8 +167,14 @@
             >
             <h2>Travelling to Kaunas</h2>
             <p>Depending where you are coming from, you may find several alternatives. We'd recommend you taking a flight to Kaunas Airport. Vilnius Airport is also well connected by train to Kaunas.</p>
-            <p>Here you can find the tickets for BUSES and TRAINS to Kaunas [TODO:add links].</p>
-            <p>TODO: Create some sort of survival guide on how to get to Kaunas city from the different airports</p>
+            <p>Here you can find the tickets for BUSES and TRAINS to Kaunas.</p>
+            <p>
+                Here you can find a
+                <a href="https://docs.google.com/document/d/1lBsMUCYIsWlYCw-RSgGT4vMyGud3aXZs5SZPSJrDAjc/edit?usp=sharing">
+                    Survival Guide
+                </a>
+                we created compiling and expanding all you need to know about Kaunas and how the transportation works.
+            </p>
             <h2>Where to stay in Kaunas</h2>
             <p>Keep in mind that the wedding night we will all sleep at the venue, which is around 45 min away from Kaunas</p>
             <p>For the rest of the days, in case you want to spend some days in the city and/or explore the country, here are some places we can recommend depending on your budget:</p>
@@ -211,6 +217,7 @@
                     </a></li>
             </ul>
         </article>
+
         <article lang="es">
             <h1>Cómo llegar a Kaunas y dónde dormir</h1>
             <img
@@ -225,11 +232,18 @@
                 <li>Vuelo directo con <a href="https://www.ryanair.com/es/es">Ryanair</a> desde Alicante</li>
             </ul>
             <p>Si voláis a Vilnius, no hay problema, luego desde allí podéis coger el tren hasta Kaunas. Otra alternativa sería alquilar un coche de <a href="https://www.citybee.lt/en">City Bee</a> y conducir hasta Kaunas (alquiler por horas).</p>
+            <p>Tenéis muchos más detalles sobre Kaunas, Lituania, transporte, dónde comer, dormir y qué cosas ver en la
+                <a href="https://docs.google.com/document/d/158m-5YNKBMhGfplrzrfctXfW_Xfil7f31YOWyYsYnxw/edit?usp=sharing">
+                    Guía de supervivencia
+                </a>
+                que hemos creado para vosotros.
+            </p>
             <h2>Dónde dormir</h2>
             <p>Nuestra recomendación sería que os pongáis de acuerdo para alquilar apartamentos de <a href="https://es.airbnb.com/">AirBnB</a> por la zona del casco antiguo de Kaunas o la zona centro.</p>
             <p>Todo lo que sea cerca de Laisves Aleja o Vilniaus Gatve es buena zona.</p>
             <p>Si preferís ir de hotel, podéis encontrar buenas oportunidades en <a href="https://www.booking.com/index.es.html">Booking.com</a>.</p>
         </article>
+
         <article lang="lt">
             <h1>Kaip nusigauti iki Kauno ir kur apsistoti</h1>
             <img
@@ -286,8 +300,9 @@
             <p>Después de la ceremonia civil, nos tomaremos algo en la plaza del ayuntamiento y luego los invitados irán en bus privado al lugar que hemos reservado para la fiesta. Los novios nos escaparemos mientras tanto para hacernos la sesión de fotos.</p>
             <p>Por si queréis echar un ojo al lugar de la fiesta, <a href="https://www.kirksnove.lt/en/weddings/">aquí tenéis su web</a>.</p>
             <p>Aparte de las cosas típicas de cualquier boda (cenar, tomarse alguna copa y bailar) podremos disfrutar de alguna tradición típica lituana y también, ¡tenemos reservado el sitio para que todos los invitados se queden a dormir!</p>
-            <p>Al día siguiente sobre las 10 tomaremos el desayuno y luego volveremos en bus a Kaunas. Deberíamos estar de vuelta en Kaunas sobre las 13:00.</p>
+            <p>Al día siguiente sobre las 10 tomaremos el desayuno y luego volveremos en bus a las 12 para llegar a Kaunas sobre las 13:30. Deberíamos estar de vuelta en Kaunas sobre las 13:00.</p>
         </article>
+
         <article lang="lt">
             <h1>Wedding day</h1>
             <p>Vestuvės įvyks 2021 m. rugpjūčio 27 d., penktadienį.</p>
