[NEW] Add service worker

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <p>We will take some extra pictures in the meanwhile and arrive to the venue a bit later.</p>
             <p>Just in case you want to check out the venue place before you get there, <a href="https://www.kirksnove.lt/en/weddings/">here you have their website</a>.</p>
             <p>Besides typical things happening in any wedding (dinner, drinks, cake, dancing...) you will be able to enjoy some Lithuanian traditions and also... We booked the place so you all can sleep in it! No need to take a taxi to go back to your hotel!</p>
-            <p>The next day, from 10am we'll have breakfast together and then get the bus back to Kaunas. We should be back in Kaunas by 13:00.</p>
+            <p>The next day, from 10 am we'll have breakfast together and then, by 12, get the bus back to Kaunas. We should be back in Kaunas by 13:15.</p>
             <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
         </article>
         <article lang="es">
@@ -297,10 +297,20 @@
                 src="assets/city-hall.jpg"
                 alt="Kaunas City Hall"
             >
-            <p>Después de la ceremonia civil, nos tomaremos algo en la plaza del ayuntamiento y luego los invitados irán en bus privado al lugar que hemos reservado para la fiesta. Los novios nos escaparemos mientras tanto para hacernos la sesión de fotos.</p>
+            <p>
+                Después de la ceremonia civil, nos tomaremos algo en la plaza del ayuntamiento,
+                nos haremos unas fotos juntos y luego los invitados irán en bus privado al lugar que hemos reservado para la fiesta (el bus sale a las 16:00).
+                Los novios nos escaparemos mientras tanto para hacernos la sesión de fotos.
+            </p>
             <p>Por si queréis echar un ojo al lugar de la fiesta, <a href="https://www.kirksnove.lt/en/weddings/">aquí tenéis su web</a>.</p>
-            <p>Aparte de las cosas típicas de cualquier boda (cenar, tomarse alguna copa y bailar) podremos disfrutar de alguna tradición típica lituana y también, ¡tenemos reservado el sitio para que todos los invitados se queden a dormir!</p>
-            <p>Al día siguiente sobre las 10 tomaremos el desayuno y luego volveremos en bus a las 12 para llegar a Kaunas sobre las 13:30. Deberíamos estar de vuelta en Kaunas sobre las 13:00.</p>
+            <p>
+                Aparte de las cosas típicas de cualquier boda (cenar, tomarse alguna copa y bailar) podremos disfrutar de alguna tradición típica lituana
+                y también, ¡tenemos reservado el sitio para que todos los invitados se queden a dormir!
+            </p>
+            <p>
+                Al día siguiente sobre las 10 tomaremos el desayuno y luego volveremos en bus a las 12.
+                Deberíamos estar de vuelta en Kaunas sobre las 13:15.
+            </p>
         </article>
 
         <article lang="lt">
