--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jurate & Paco's wedding</title>
     <link rel="shortcut icon" href="assets/logo.png" type="image/png">
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oregano&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
