[FIX] Add install prompt handler 3/3

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
             <span lang="es">Día de la boda</span>
             <span lang="lt">Vestuvių diena</span>
         </a>
+        <div
+            id="install"
+            role="button"
+            style="display: none;"
+            class="install-prompt"
+        >
+            Install this web as a app in your device
+            <button
+                id="close"
+                onclick="hideInstallPrompt()"
+            >
+                I'd rather not
+            </button>
+        </div>
     </nav>
 
     <section id="home">
