Add meeting point to English and Spanish versions

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </p>
             <h2>Dónde dormir</h2>
             <p>Nuestra recomendación sería que os pongáis de acuerdo para alquilar apartamentos de <a href="https://es.airbnb.com/">AirBnB</a> por la zona del casco antiguo de Kaunas o la zona centro.</p>
-            <p>Todo lo que sea cerca de Laisves Aleja o Vilniaus Gatve es buena zona.</p>
+            <p>Todo lo que sea cerca de Laisves Aleja es buena zona. La zona de Vilniaus Gatve suele estar bien pero está todo en obras, así que mejor evitarla.</p>
             <p>Si preferís ir de hotel, podéis encontrar buenas oportunidades en <a href="https://www.booking.com/index.es.html">Booking.com</a>.</p>
         </article>
 
@@ -295,6 +295,7 @@
                 </a>
                 at 14:50 EEST (it used to be at 13:00).
             </p>
+            <p>The meeting point is at 14:00 at the city hall, so we recommend having some strong brunch before going to the city hall so you can have energy for the rest of the day until dinner.</p>
             <img
                 src="assets/city-hall.jpg"
                 alt="Kaunas City Hall"
@@ -319,6 +320,7 @@
                 </a>
                 a las 14:50 (hora local) (hemos actualizado la hora).
             </p>
+            <p>La hora de quedada son las 14:00 en la plaza del ayuntamiento por lo que se recomienda comer pronto/desayunar tarde para luego aguantar todo el día a tope.</p>
             <img
                 src="assets/city-hall.jpg"
                 alt="Kaunas City Hall"
