--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 >
                 Kaunas City Hall
                 </a>
-                at 14:50 EEST (it used to be at 13:00).
+                at 14:50 EEST.
             </p>
             <p>The meeting point is at 14:00 at the city hall, so we recommend having some strong brunch before going to the city hall so you can have energy for the rest of the day until dinner.</p>
             <img
@@ -318,7 +318,7 @@
                 >
                 Ayuntamiento de Kaunas
                 </a>
-                a las 14:50 (hora local) (hemos actualizado la hora).
+                a las 14:50 (hora local).
             </p>
             <p>La hora de quedada son las 14:00 en la plaza del ayuntamiento por lo que se recomienda comer pronto/desayunar tarde para luego aguantar todo el día a tope.</p>
             <img
@@ -342,7 +342,7 @@
         </article>
 
         <article lang="lt">
-            <h1>Wedding day</h1>
+            <h1>Vestuvių diena</h1>
             <p>Vestuvės įvyks 2021 m. rugpjūčio 27 d., penktadienį.</p>
             <p>
                 Ceremonija įvyks
@@ -352,7 +352,8 @@
                 >
                 Kauno Rotušėje
                 </a>
-                14:50 val. (laikas gali keistis).</p>
+                14:50 val. Prašome visus atvykti 14 val. į aikštę. 
+                Taip pat prašome dėl visų sveikatos visus nepasiskiepijusius pasidaryti Covid testus ir taip užtikrinti, kad neperduodate viruso kitiems žmonėms.</p>
             <img
                 src="assets/city-hall.jpg"
                 alt="Kauno Rotušė"
