[NEW] Add live stream

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <a data-lang="en">EN</a>
         <a data-lang="lt">LT</a>
 
-        <a href="#rsvp">
-            <span lang="en">RSPV</span>
-            <span lang="es">Confirma tu asistencia</span>
-            <span lang="lt">Registracija</span>
+        <a href="#live">
+            <span lang="en">Live streaming</span>
+            <span lang="es">Ve la boda en directo</span>
+            <span lang="lt">Tiesioginis transliavimas</span>
         </a>
         <a href="#gifts">
             <span lang="en">Gifts</span>
@@ -139,18 +139,20 @@
         </article>
     </section>
 
-    <section id="rsvp">
-        <article lang="en">
-            <h1>RSVP</h1>
-            <p>Fill out <a href="https://forms.gle/FHzofBnRecomE6Y29">this form</a> in order to let us know if you are joining us on our special day.</p>
-        </article>
-        <article lang="es">
-            <h1>Confirma tu asistencia</h1>
-            <p>Rellena <a href="https://forms.gle/BXamJ7xaRNs8V8sw7">este formulario</a> para indicarnos si podrás unirte a nuestra celebración.</p>
-        </article>
-        <article lang="lt">
-         <h1>Registracija</h1>
-            <p>Užpildykite <a href="https://forms.gle/b91bZjtBuDePbDNQA">šią anketą</a>, kad žinotume dėl jūsų atvykimo mūsų ypatingąją dieną.</p>
+    <section id="live">
+        <article>
+            <h1 lang="en">Live streaming</h1>
+            <h1 lang="es">Ve la boda en directo</h1>
+            <h1 lang="lt">Tiesioginis transliavimas</h1>
+            <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/H6YJMWY_jLE"
+                title="Wedding live"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+            ></iframe>
         </article>
     </section>
 
