--- a/index.html
+++ b/index.html
@@ -144,15 +144,17 @@
             <h1 lang="en">Live streaming</h1>
             <h1 lang="es">Ve la boda en directo</h1>
             <h1 lang="lt">Tiesioginis transliavimas</h1>
-            <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/H6YJMWY_jLE"
-                title="Wedding live"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-            ></iframe>
+            <div class="videoWrapper">
+                <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/H6YJMWY_jLE"
+                    title="Wedding live"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                ></iframe>
+            </div>
         </article>
     </section>
 
