--- a/index.html
+++ b/index.html
@@ -37,42 +37,12 @@
             <span lang="es">Ve la boda en directo</span>
             <span lang="lt">Tiesioginis transliavimas</span>
         </a>
-        <a href="#gifts">
-            <span lang="en">Gifts</span>
-            <span lang="es">Regalos</span>
-            <span lang="lt">Dovanos</span>
-        </a>
         <a href="#kaunas">Kaunas</a>
         <a href="#venue">
             <span lang="en">Wedding day</span>
             <span lang="es">Día de la boda</span>
             <span lang="lt">Vestuvių diena</span>
         </a>
-        <div
-            id="install"
-            style="display: none;"
-            class="install-prompt"
-        >
-            <p lang="en">Install this web as a app in your device</p>
-            <p lang="es">¿Quieres instalar esta web como si fuese una app en tu móvil?</p>
-            <p lang="lt">Įdiekite šį žiniatinklį kaip programą savo prietaise</p>
-            <button
-                class="button accept"
-                onclick="installPrompt()"
-            >
-                <span lang="en">Install</span>
-                <span lang="es">Instalar</span>
-                <span lang="lt">Instaliuoti</span>
-            </button>
-            <button
-                class="button cancel"
-                onclick="hideInstallPrompt()"
-            >
-                <span lang="en">I'd rather not</span>
-                <span lang="es">Mejor no</span>
-                <span lang="lt">Ne dabar</span>
-            </button>
-        </div>
     </nav>
 
     <section id="home">
@@ -156,36 +126,6 @@
                 ></iframe>
             </div>
         </article>
-    </section>
-
-    <section id="gifts">
-        <article lang="en">
-            <h1>Gifts</h1>
-            <p>The best gift is your presence in the event. After so much time not seeing each other, we'd love to have you with us in Kaunas on this special day.</p>
-            <p>However, for those who have been asking us how to contribute to this new chapter in our lives, we've created a bank account here:</p>
-        </article>
-        <article lang="es">
-            <h1>Regalos</h1>
-            <p>El mejor regalo que podemos recibir es vuestra presencia en el evento. Después de tanto tiempo sin vernos, nos encantaría tenerte con nosotros en Kaunas y poder celebrar todos juntos esta día tan especial.</p>
-            <p>Sin embargo, para aquellos que nos han estado preguntando cómo contribuir a este nuevo capítulo en nuestras vidas, hemos creado una cuenta bancaria aquí:</p>
-        </article>
-        <article lang="lt">
-            <h1>Dovanos</h1>
-            <p>Geriausia dovana, kurią jūs mums galite padovanoti, yra jūsų buvimas šioje šventėje. Po ilgo nesimatymo, jūsų buvimas mums brangią ieną būtų neįkainojamas.</p>
-            <p>Visgi, jei norite prisidėti prie mūsų naujo gyvenimo skyriaus, tam mes sukūrėme banko sąskaitą:</p>       
-        </article>
-        <p>
-            <span lang="en">Name:</span>
-            <span lang="es">Nombre:</span>
-            <span lang="lt">Vardas:</span>
-            Francisco Gordillo Alcázar
-        </p>
-        <p>IBAN: ES73 1465 01 00961725866024</p>
-        <p>
-            <span lang="en">SWIFT</span>
-            <span lang="es">Código</span>
-            <span lang="lt">SWIFT</span>
-            BIC: INGDESMMXXX</p>
     </section>
 
     <section id="kaunas">
@@ -288,9 +228,9 @@
     <section id="venue">
         <article lang="en">
             <h1>Wedding day</h1>
-            <p>The wedding is planned for Friday 27th August 2021</p>
+            <p>The wedding was celebrated for Friday 27th August 2021</p>
             <p>
-                The ceremony will be held at
+                The ceremony was held at
                 <a
                     href="https://www.google.es/maps/place/Rotu%C5%A1%C4%97s+aik%C5%A1t%C4%97/@54.8967432,23.884456,17z/data=!3m1!4b1!4m5!3m4!1s0x46e723576a8e2c9f:0xa86456a78eb0edf1!8m2!3d54.8967432!4d23.8866447"
                     target="_blank"
@@ -304,18 +244,17 @@
                 src="assets/city-hall.jpg"
                 alt="Kaunas City Hall"
             >
-            <p>After the civil ceremony, we'll hang out in the square near the City Hall and then we'll go by a private bus all together (except the newlyweds) to the venue.</p>
-            <p>We will take some extra pictures in the meanwhile and arrive to the venue a bit later.</p>
-            <p>Just in case you want to check out the venue place before you get there, <a href="https://www.kirksnove.lt/en/weddings/">here you have their website</a>.</p>
-            <p>Besides typical things happening in any wedding (dinner, drinks, cake, dancing...) you will be able to enjoy some Lithuanian traditions and also... We booked the place so you all can sleep in it! No need to take a taxi to go back to your hotel!</p>
-            <p>The next day, from 10 am we'll have breakfast together and then, by 12, get the bus back to Kaunas. We should be back in Kaunas by 13:15.</p>
-            <p>Let us know in case you'll go to the venue by car so we can adjust the places of the bus.</p>
+            <p>After the civil ceremony, we hung out in the square near the City Hall and then went by a private bus all together (except the newlyweds) to the venue.</p>
+            <p>In the meanwhile, we took some extra pictures and arrived to the venue a bit later.</p>
+            <p>Just in case you want to check out the venue place, <a href="https://www.kirksnove.lt/en/weddings/">here you have their website</a>.</p>
+            <p>Besides typical things happening in any wedding (dinner, drinks, cake, dancing...) you were able to enjoy some Lithuanian traditions and also... We booked the place so you all could sleep in it! No need to take a taxi to go back to your hotel!</p>
+            <p>The next day, from 10 am had breakfast together and then, by 12, got the bus back to Kaunas. We were back in Kaunas by 13:15.</p>
         </article>
         <article lang="es">
             <h1>Día de la boda</h1>
-            <p>El día de la boda es el viernes 27 de agosto de 2021</p>
+            <p>El día de la boda fue el viernes 27 de agosto de 2021</p>
             <p>
-                La ceremonia tendrá lugar en el
+                La ceremonia tuvo lugar en el
                 <a
                     href="https://www.google.es/maps/place/Rotu%C5%A1%C4%97s+aik%C5%A1t%C4%97/@54.8967432,23.884456,17z/data=!3m1!4b1!4m5!3m4!1s0x46e723576a8e2c9f:0xa86456a78eb0edf1!8m2!3d54.8967432!4d23.8866447"
                     target="_blank"
@@ -324,24 +263,23 @@
                 </a>
                 a las 14:50 (hora local).
             </p>
-            <p>La hora de quedada son las 14:00 en la plaza del ayuntamiento por lo que se recomienda comer pronto/desayunar tarde para luego aguantar todo el día a tope.</p>
+            <p>La hora de quedada fue a las 14:00 en la plaza del ayuntamiento por lo que recomendamos comer pronto/desayunar tarde para luego aguantar todo el día a tope.</p>
             <img
                 src="assets/city-hall.jpg"
                 alt="Kaunas City Hall"
             >
             <p>
-                Después de la ceremonia civil, nos tomaremos algo en la plaza del ayuntamiento,
-                nos haremos unas fotos juntos y luego los invitados irán en bus privado al lugar que hemos reservado para la fiesta (el bus sale a las 16:00).
-                Los novios nos escaparemos mientras tanto para hacernos la sesión de fotos.
+                Después de la ceremonia civil, nos hicimos unas fotos juntos y luego los invitados fueron en bus privado al lugar que reservamos para la fiesta (el bus llega a la plaza del ayuntamiento a las 16:00).
+                Los novios nos escapamos mientras tanto para hacernos la sesión de fotos.
             </p>
             <p>Por si queréis echar un ojo al lugar de la fiesta, <a href="https://www.kirksnove.lt/en/weddings/">aquí tenéis su web</a>.</p>
             <p>
-                Aparte de las cosas típicas de cualquier boda (cenar, tomarse alguna copa y bailar) podremos disfrutar de alguna tradición típica lituana
-                y también, ¡tenemos reservado el sitio para que todos los invitados se queden a dormir!
+                Aparte de las cosas típicas de cualquier boda (cenar, tomarse alguna copa y bailar) pudimos disfrutar de alguna tradición típica lituana
+                y también, ¡reservamos el sitio para que todos los invitados se queden a dormir!
             </p>
             <p>
-                Al día siguiente sobre las 10 tomaremos el desayuno y luego volveremos en bus a las 12.
-                Deberíamos estar de vuelta en Kaunas sobre las 13:15.
+                Al día siguiente sobre las 10 tomamos el desayuno y luego volvimos en bus a las 12.
+                Llegamos de vuelta en Kaunas sobre las 13:15.
             </p>
         </article>
 
