Add wedding photos using Flickr album iframe

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <a data-lang="es">ES</a>
         <a data-lang="en">EN</a>
         <a data-lang="lt">LT</a>
+        <a href="#photos">
+            <span lang="en">Photos</span>
+            <span lang="es">Fotos</span>
+            <span lang="lt">Nuotraukos</span>
+        </a>
 
         <a href="#live">
             <span lang="en">Live streaming</span>
@@ -107,6 +112,16 @@
             <p>Iš pradžių tai buvo sunku, tačiau kiekvienas susitikimas tai atpirkdavo.</p>
             <p>Po beveik 3 metų vienas kito lankymo, Paco nusprendė persikelti į Lietuvą ir gyventi kartu. Mūsų vestuvių dieną bus lygiai 5 metai kaip esame kartu.</p>
         </article>
+    </section>
+
+    <section id="photos">
+      <h1 lang="en">Photos</h1>
+      <h1 lang="es">Fotos</h1>
+      <h1 lang="lt">Nuotraukos</h1>
+      <a data-flickr-embed="true" href="https://www.flickr.com/photos/194622504@N05/albums/72177720295378438" title="Wedding of Jurate and Paco">
+        <img src="https://live.staticflickr.com/65535/51755777647_e177149b6c_z.jpg" width="640" height="480" alt="Wedding of Jurate and Paco">
+      </a>
+      <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
     </section>
 
     <section id="live">
